--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -334,6 +334,8 @@ items:
           href: v2-oauth2-on-behalf-of-flow.md
         - name: Beviljande av autentiseringsuppgifter för OAuth 2.0-klient
           href: v2-oauth2-client-creds-grant-flow.md
+        - name: Beviljande via resursägarens lösenordsautentiseringsuppgifter för OAuth 2.0
+          href: v2-oauth-ropc.md
       - name: Förnyelse av signeringsnyckel
         href: active-directory-signing-key-rollover.md
       - name: ID-tokens
@@ -433,9 +435,9 @@ items:
     href: developer-support-help-options.md
   - name: Hanterade identiteter för Azure-resurser
     href: https://docs.microsoft.com/azure/active-directory/managed-service-identity/overview
-ms.openlocfilehash: 00aa04556d555c5e29707287e2cb91db22f34ac7
-ms.sourcegitcommit: 00dd50f9528ff6a049a3c5f4abb2f691bf0b355a
+ms.openlocfilehash: 71ba5312a5cfaf10ee2ece5ae376b87fe44d231f
+ms.sourcegitcommit: 345b96d564256bcd3115910e93220c4e4cf827b3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/05/2018
-ms.locfileid: "51011637"
+ms.lasthandoff: 11/28/2018
+ms.locfileid: "52497501"
