--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -5,6 +5,8 @@ items:
   items:
   - name: Om API Management
     href: api-management-key-concepts.md
+  - name: Tillgänglighet för API Management-funktioner
+    href: api-management-features.md
 - name: Snabbstarter
   items:
   - name: Skapa en instans – portalen
@@ -48,6 +50,8 @@ items:
       href: api-management-howto-policies.md
     - name: Principreferensindex
       href: api-management-policies.md
+  - name: Prenumerationer
+    href: api-management-subscriptions.md
   - name: Hantera med hjälp av automatisering
     href: automation-manage-api-management.md
   - name: Felhantering
@@ -56,7 +60,7 @@ items:
     href: api-management-api-import-restrictions.md
 - name: Instruktionsguider
   items:
-  - name: 'Definiera API: er '
+  - name: 'Definiera API: er'
     items:
     - name: Lägga till ett API manuellt
       href: add-api-manually.md
@@ -90,6 +94,14 @@ items:
     items:
     - name: Lägg till cachelagring för att förbättra prestandan
       href: api-management-howto-cache.md
+    - name: Använd extern cachelagring
+      href: api-management-howto-cache-external.md
+  - name: Skydda dina API:er
+    items:
+    - name: Skapa prenumerationer
+      href: api-management-howto-create-subscriptions.md
+    - name: Säkra API:er med autentisering med klientcertifikat
+      href: api-management-howto-mutual-certificates-for-clients.md
   - name: Skydda din serverdel
     items:
     - name: Skydda ditt API med Azure AD
@@ -138,8 +150,6 @@ items:
       href: api-management-sample-send-request.md
     - name: Hantera hemligheter med hjälp av egenskaper
       href: api-management-howto-properties.md
-    - name: Säkra API:er med autentisering med klientcertifikat
-      href: api-management-howto-mutual-certificates-for-clients.md
     - name: Principer för begränsning av åtkomst
       href: api-management-access-restriction-policies.md
     - name: Avancerade principer
@@ -232,9 +242,9 @@ items:
     href: http://aka.ms/apimblog
   - name: Funktionsbegäranden
     href: http://aka.ms/apimwish
-ms.openlocfilehash: bbd98974e763ae98d7f754e9d8e690d0a8c62870
-ms.sourcegitcommit: 1aacea6bf8e31128c6d489fa6e614856cf89af19
+ms.openlocfilehash: 93a5457286e5e69e504e6858d6b9f0e8491b3c30
+ms.sourcegitcommit: eba6841a8b8c3cb78c94afe703d4f83bf0dcab13
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/16/2018
-ms.locfileid: "49339404"
+ms.lasthandoff: 11/29/2018
+ms.locfileid: "52620055"
