--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -156,6 +156,8 @@ items:
       href: ../web-sites-monitor.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
     - name: Aktivera loggar
       href: ../web-sites-enable-diagnostic-log.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+    - name: Integreringar i Java APM
+      href: how-to-java-apm-monitoring.md
   - name: Hantera app
     items:
     - name: Säkerhetskopiera en app
@@ -244,9 +246,9 @@ items:
         href: ../app-service-web-open-source-technologies-faq.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
       - name: Vanliga frågor och svar om konfiguration och hantering
         href: ../app-service-web-configuration-and-management-faq.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-ms.openlocfilehash: bce6a2c196027b0e437207572c95e33b7f62809e
-ms.sourcegitcommit: db2cb1c4add355074c384f403c8d9fcd03d12b0c
+ms.openlocfilehash: bccfbf49565b519a279dc77730410f3d9391d5e8
+ms.sourcegitcommit: 345b96d564256bcd3115910e93220c4e4cf827b3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/15/2018
-ms.locfileid: "51684723"
+ms.lasthandoff: 11/28/2018
+ms.locfileid: "52498743"
