--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -3,8 +3,10 @@ items:
   href: index.yml
 - name: Översikt
   items:
-  - name: Om Functions
+  - name: Om Azure Functions
     href: functions-overview.md
+  - name: Bestående funktioner
+    href: durable/durable-functions-overview.md
   - name: Jämförelse utan server
     href: functions-compare-logic-apps-ms-flow-webjobs.md
 - name: Snabbstarter
@@ -94,44 +96,6 @@ items:
     href: ip-addresses.md
   - name: Lokala funktioner
     href: functions-runtime-overview.md
-  - name: Bestående funktioner
-    items:
-    - name: Översikt
-      href: durable-functions-overview.md
-    - name: Funktionstyper och funktioner
-      href: durable-functions-types-features-overview.md
-    - name: Bindningar
-      href: durable-functions-bindings.md
-    - name: Kontrollpunkt och återuppspelning
-      href: durable-functions-checkpointing-and-replay.md
-    - name: Anpassad orkestreringsstatus
-      href: durable-functions-custom-orchestration-status.md
-    - name: Instanshantering
-      href: durable-functions-instance-management.md
-    - name: HTTP-API
-      href: durable-functions-http-api.md
-    - name: Felhantering
-      href: durable-functions-error-handling.md
-    - name: Diagnostik
-      href: durable-functions-diagnostics.md
-    - name: Timers
-      href: durable-functions-timers.md
-    - name: Externa händelser
-      href: durable-functions-external-events.md
-    - name: Eternal-orkestreringar
-      href: durable-functions-eternal-orchestrations.md
-    - name: Singleton-orkestreringar
-      href: durable-functions-singletons.md
-    - name: Sub-orkestreringar
-      href: durable-functions-sub-orchestrations.md
-    - name: Uppgiftshubbar
-      href: durable-functions-task-hubs.md
-    - name: Versionshantering
-      href: durable-functions-versioning.md
-    - name: Prestanda och skalning
-      href: durable-functions-perf-and-scale.md
-    - name: Haveriberedskap och geo-replikering
-      href: durable-functions-disaster-recovery-geo-distribution.md
 - name: Instruktionsguider
   items:
   - name: Utveckla
@@ -180,6 +144,30 @@ items:
       href: disable-function.md
   - name: Övervaka
     href: functions-monitoring.md
+  - name: Skydda
+    items:
+    - name: Köpa SSL-cert
+      href: ../app-service/web-sites-purchase-ssl-web-site.md?toc=%2fazure%2fazure-functions%2ftoc.json
+    - name: Autentisera användare
+      items:
+      - name: Autentisera med Azure AD
+        href: ../app-service/app-service-mobile-how-to-configure-active-directory-authentication.md?toc=%2fazure%2fazure-functions%2ftoc.json
+      - name: Autentisera med Facebook
+        href: ../app-service/app-service-mobile-how-to-configure-facebook-authentication.md?toc=%2fazure%2fazure-functions%2ftoc.json
+      - name: Autentisera med Google
+        href: ../app-service/app-service-mobile-how-to-configure-google-authentication.md?toc=%2fazure%2fazure-functions%2ftoc.json
+      - name: Autentisera med Microsoft-konto
+        href: ../app-service/app-service-mobile-how-to-configure-microsoft-authentication.md?toc=%2fazure%2fazure-functions%2ftoc.json
+      - name: Autentisera med Twitter
+        href: ../app-service/app-service-mobile-how-to-configure-twitter-authentication.md?toc=%2fazure%2fazure-functions%2ftoc.json
+    - name: Avancerad autentisering
+      href: ../app-service/app-service-authentication-how-to.md?toc=%2fazure%2fazure-functions%2ftoc.json
+    - name: Begränsa IP-adresser
+      href: ../app-service/app-service-ip-restrictions.md?toc=%2fazure%2fazure-functions%2ftoc.json
+    - name: Använda en hanterad identitet
+      href: ../app-service/app-service-managed-service-identity.md?toc=%2fazure%2fazure-functions%2ftoc.json
+    - name: Referera hemligheter från Key Vault
+      href: ../app-service/app-service-key-vault-references.md?toc=%2fazure%2fazure-functions%2ftoc.json
   - name: Integrera
     items:
     - name: Ansluta SQL Database
@@ -194,24 +182,6 @@ items:
       href: functions-flow-scenario.md
     - name: Använda en hanterad identitet
       href: ../app-service/app-service-managed-service-identity.md?toc=%2fazure%2fazure-functions%2ftoc.json
-  - name: Bestående funktioner
-    items:
-    - name: Installera
-      href: durable-functions-install.md
-    - name: Länkning
-      href: durable-functions-sequence.md
-    - name: Förgrening
-      href: durable-functions-cloud-backup.md
-    - name: Övervakare
-      href: durable-functions-monitor.md
-    - name: Mänsklig interaktion
-      href: durable-functions-phone-verification.md
-    - name: Enhetstestning
-      href: durable-functions-unit-testing.md
-    - name: Publicering av händelser
-      href: durable-functions-event-publishing.md
-    - name: Använd WebJobs-SDK
-      href: durable-functions-webjobs-sdk.md
   - name: Felsöka
     items:
     - name: Felsöka Storage
@@ -288,13 +258,15 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-functions
   - name: Twitter
     href: https://twitter.com/azurefunctions
+  - name: Ge produktfeedback
+    href: https://feedback.azure.com/forums/355860-azure-functions
   - name: Azure Functions GitHub-lagringsplats
     href: https://github.com/Azure/Azure-Functions/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=functions&updatetype=&platform=
-ms.openlocfilehash: eb408491ee9ed4994324a5fd425e87da6e4c59a1
-ms.sourcegitcommit: 0b7fc82f23f0aa105afb1c5fadb74aecf9a7015b
+ms.openlocfilehash: facc469c576bf1de905441bb5b56a00bd745e924
+ms.sourcegitcommit: c8088371d1786d016f785c437a7b4f9c64e57af0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/14/2018
-ms.locfileid: "51633792"
+ms.lasthandoff: 11/30/2018
+ms.locfileid: "52632304"
