--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -68,6 +68,8 @@ items:
         href: backup-mabs-add-storage.md
       - name: Nyheter i MABS
         href: backup-mabs-whats-new-mabs.md
+      - name: Viktig information om MABS V3
+        href: backup-mabs-release-notes-v3.md
       - name: Obevakad installation
         href: backup-mabs-unattended-install.md
     - name: Skydda arbetsbelastningar
@@ -248,9 +250,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=backup
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=backup
-ms.openlocfilehash: ff42e7281240f8483355f2b3764dc51826885188
-ms.sourcegitcommit: 0fc99ab4fbc6922064fc27d64161be6072896b21
+ms.openlocfilehash: a10a5db8c8d364d5ea1a09180e14826e67eb2c01
+ms.sourcegitcommit: a08d1236f737915817815da299984461cc2ab07e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "51578441"
+ms.lasthandoff: 11/26/2018
+ms.locfileid: "52317610"
