--- a/articles/billing/TOC.yml
+++ b/articles/billing/TOC.yml
@@ -5,6 +5,8 @@ items:
   items:
   - name: Förstå fakturan
     href: billing-understand-your-bill.md
+  - name: Förstå fakturan – Endast EA
+    href: billing-understand-your-bill-ea.md
   - name: Hämta faktura och användningsdata
     href: billing-download-azure-invoice-daily-usage-date.md
   - name: Avgifter för tjänster från tredje part
@@ -18,6 +20,8 @@ items:
   items:
   - name: Undvik oväntade kostnader
     href: billing-getting-started.md
+  - name: Visa EA-priser
+    href: billing-ea-pricing.md
   - name: Använda resurstaggar
     href: ../azure-resource-manager/resource-group-using-tags.md?toc=/azure/billing/TOC.json
   - name: Börja analysera kostnader – endast Enterprise-avtal
@@ -82,6 +86,8 @@ items:
     href: billing-how-to-change-azure-account-profile.md
   - name: Bevilja åtkomst till fakturering
     href: billing-manage-access.md
+  - name: EA-roller i Azure
+    href: billing-understand-ea-roles.md
   - name: Länka partner-ID
     href: billing-partner-admin-link-started.md
   - name: Visa faktureringskonton
@@ -112,7 +118,9 @@ items:
     href: ../azure-resource-manager/management-groups-create.md?toc=/azure/billing/TOC.json
   - name: Flytta Azure-resurser
     href: ../azure-resource-manager/resource-group-move-resources.md?toc=/azure/billing/TOC.json
-  - name: Skapa Enterprise prenumerationer
+  - name: Skapa ytterligare prenumerationer
+    href: billing-create-subscription.md
+  - name: Skapa Enterprise-prenumerationer programmässigt
     href: ../azure-resource-manager/programmatically-create-subscription.md?toc=/azure/billing/TOC.json
   - name: Exportera prenumerationsinformation
     href: billing-export-subscriptions.md
@@ -180,9 +188,9 @@ items:
     items:
     - name: REST API för Enterprise Reporting
       href: https://docs.microsoft.com/rest/api/billing/enterprise/billing-enterprise-api-balance-summary
-ms.openlocfilehash: 88e6864df13312c1963e39ff2c23eb63fde50bc2
-ms.sourcegitcommit: f58fc4748053a50c34a56314cf99ec56f33fd616
+ms.openlocfilehash: 5de05f7b1426a959c046b1e651f09c2f8e584b8a
+ms.sourcegitcommit: 345b96d564256bcd3115910e93220c4e4cf827b3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/04/2018
-ms.locfileid: "48268148"
+ms.lasthandoff: 11/28/2018
+ms.locfileid: "52497834"
