--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -5,12 +5,11 @@ items:
   items:
   - name: Vad är Speech Service?
     href: overview.md
+  - name: Prova Speech Service kostnadsfritt
+    href: get-started.md
   expanded: true
 - name: Snabbstarter
   items:
-  - name: Prova Speech Service kostnadsfritt
-    displayName: get started, subscription key
-    href: get-started.md
   - name: Identifiera tal
     items:
     - name: Använda C# (.NET i Windows)
@@ -40,6 +39,12 @@ items:
     - name: Använda Objective-C (iOS)
       displayName: recognize speech, speech recognition, speech to text, stt, xcode
       href: quickstart-objectivec-ios.md
+  - name: Text till tal
+    items:
+    - name: Använda C#, REST
+      href: quickstart-dotnet-text-to-speech.md
+    - name: Använda Python, REST
+      href: quickstart-python-text-to-speech.md
   - name: Komma igång med Speech Devices SDK
     displayName: roobo, speech devices sdk
     href: speech-devices-sdk-qsg.md
@@ -198,9 +203,9 @@ items:
     href: https://azure.microsoft.com/roadmap/?category=ai-machine-learning
   - name: Sekretess och cookies
     href: https://privacy.microsoft.com/privacystatement
-ms.openlocfilehash: 80e3fa94f14541ef15f374c3eec510cbc3958bab
-ms.sourcegitcommit: c2c279cb2cbc0bc268b38fbd900f1bac2fd0e88f
+ms.openlocfilehash: d8bd694a976bb233ee25bca050505042759417ac
+ms.sourcegitcommit: c8088371d1786d016f785c437a7b4f9c64e57af0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/24/2018
-ms.locfileid: "49986750"
+ms.lasthandoff: 11/30/2018
+ms.locfileid: "52635568"
