--- a/articles/hdinsight/storm/TOC.yml
+++ b/articles/hdinsight/storm/TOC.yml
@@ -1,7 +1,7 @@
 items:
 - name: Dokumentation om Azure HDInsight
   href: /azure/hdinsight
-- name: Storm på HDInsight
+- name: Apache Storm på HDInsight
   items:
   - name: Översikt
     href: apache-storm-overview.md
@@ -13,7 +13,7 @@ items:
     maintainContext: true
 - name: Kom igång
   items:
-  - name: Skapa ett Storm-kluster
+  - name: Skapa ett Apache Storm-kluster
     href: apache-storm-tutorial-get-started-linux.md
   - name: Installera HDInsight-appar
     href: ../hdinsight-apps-install-applications.md
@@ -23,7 +23,7 @@ items:
     maintainContext: true
 - name: Gör så här för att
   items:
-  - name: Utveckla Storm-topologier
+  - name: Utveckla Apache Storm-topologier
     items:
     - name: Utveckla topologier med Java
       href: apache-storm-develop-java-topology.md
@@ -33,22 +33,22 @@ items:
       href: apache-storm-develop-csharp-visual-studio-topology.md
     - name: Programmeringsguide för SCP.NET
       href: apache-storm-scp-programming-guide.md
-    - name: Storm-exempel
+    - name: Apache Storm-exempel
       href: apache-storm-example-topology.md
   - name: Distribuera och övervaka topologier
     href: apache-storm-deploy-monitor-topology-linux.md
   - name: Skapa strömningspipelines
     items:
-    - name: Kafka och Storm (Java)
+    - name: Apache Kafka och Apache Storm (Java)
       href: ../hdinsight-apache-storm-with-kafka.md
       maintainContext: true
     - name: Event Hub, Storage och Data Lake Store (Java)
       href: https://azure.microsoft.com/resources/samples/hdinsight-java-storm-eventhub/
-    - name: Event Hub och Storm (C# och Java)
+    - name: Event Hub och Apache Storm (C# och Java)
       href: apache-storm-develop-csharp-event-hub-topology.md
     - name: Azure Storage/Data Lake Store (Java)
       href: apache-storm-write-data-lake-store.md
-    - name: Event Hub, HBase (Java)
+    - name: Event Hub, Apache HBase (Java)
       href: apache-storm-sensor-data-analysis.md
   - name: Utöka kluster
     items:
@@ -124,10 +124,10 @@ items:
         href: ../hdinsight-hadoop-create-linux-clusters-arm-templates.md
         maintainContext: true
       maintainContext: true
-    - name: Hantera Hadoop-kluster
+    - name: Hantera Apache Hadoop-kluster
       href: ../hdinsight-administer-use-portal-linux.md
       items:
-      - name: Använda .NET SDK
+      - name: Använd .NET SDK
         href: ../hdinsight-administer-use-dotnet-sdk.md
         maintainContext: true
       - name: Använda Azure PowerShell
@@ -137,13 +137,13 @@ items:
         href: ../hdinsight-administer-use-command-line.md
         maintainContext: true
       maintainContext: true
-    - name: Hantera kluster med Ambari-webbgränssnittet
+    - name: Hantera kluster med Apache Ambari-webbgränssnittet
       href: ../hdinsight-hadoop-manage-ambari.md
       items:
-      - name: Optimera kluster med Ambari-webbgränssnittet
+      - name: Optimera kluster med Apache Ambari-webbgränssnittet
         href: ../hdinsight-changing-configs-via-ambari.md
         maintainContext: true
-      - name: Använda Ambari REST API
+      - name: Använda Apache Ambari REST API
         href: ../hdinsight-hadoop-manage-ambari-rest-api.md
         maintainContext: true
       maintainContext: true
@@ -153,13 +153,13 @@ items:
     - name: Lägga till lagringskonton
       href: ../hdinsight-hadoop-add-storage.md
       maintainContext: true
-    - name: Överföra data för Hadoop-jobb
+    - name: Ladda upp data för Apache Hadoop-jobb
       href: ../hdinsight-upload-data.md
       maintainContext: true
     - name: Flera HDInsight-kluster med Data Lake Store
       href: ../hdinsight-multiple-clusters-data-lake-store.md
       maintainContext: true
-    - name: Importera och exportera data med Sqoop
+    - name: Importera och exportera data med Apache Sqoop
       href: ../hdinsight-use-sqoop.md
       items:
       - name: Anslut med SSH
@@ -175,10 +175,10 @@ items:
         href: ../hdinsight-hadoop-use-sqoop-powershell.md
         maintainContext: true
       maintainContext: true
-    - name: Använd Oozie för arbetsflöden
+    - name: Använda Apache Oozie för arbetsflöden
       href: ../hdinsight-use-oozie-linux-mac.md
       maintainContext: true
-    - name: Använd tidsbaserade Oozie-koordinatorer
+    - name: Använda tidsbaserade Apache Oozie-koordinatorer
       href: ../hdinsight-use-oozie-coordinator-time.md
       maintainContext: true
     - name: Kluster- och tjänstportar samt URI:er
@@ -202,12 +202,12 @@ items:
     - name: Felsöka ett långsamt eller felaktigt HDInsight-kluster
       href: ../hdinsight-troubleshoot-failed-cluster.md
       maintainContext: true
-    - name: Felsökning för HDFS
+    - name: Felsökning för Hadoop Distributed File System i Apache Hadoop
       href: ../hdinsight-troubleshoot-hdfs.md
       maintainContext: true
-    - name: Felsökning för STORM
+    - name: Felsökning för Apache STORM
       href: apache-troubleshoot-storm.md
-    - name: Felsökning för YARN
+    - name: Felsökning för Apache Hadoop YARN
       href: ../hdinsight-troubleshoot-yarn.md
       maintainContext: true
     - name: Resurser
@@ -215,13 +215,13 @@ items:
       - name: Information om hur du använder HDInsight på Linux
         href: ../hdinsight-hadoop-linux-information.md
         maintainContext: true
-      - name: Minne och prestanda för Hadoop
+      - name: Minne och prestanda för Apache Hadoop
         href: ../hdinsight-hadoop-stack-trace-error-messages.md
         maintainContext: true
       - name: Få åtkomst till Hadoop YARN-programloggar på Linux
         href: ../hdinsight-hadoop-access-yarn-app-logs-linux.md
         maintainContext: true
-      - name: Aktivera heap dumps för Hadoop-tjänster
+      - name: Aktivera heap dumps för Apache Hadoop-tjänster
         href: ../hdinsight-hadoop-collect-debug-heap-dump-linux.md
         maintainContext: true
     maintainContext: true
@@ -263,13 +263,13 @@ items:
     href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-preview
   - name: Go SDK
     href: ../hdinsight-go-sdk-overview.md
-  - name: .NET (HBase)
+  - name: .NET (Apache HBase)
     href: https://www.nuget.org/packages/Microsoft.HBase.Client/
   - name: .NET (Avro)
     href: https://hadoopsdk.codeplex.com/wikipage?title=Avro%20Library
   - name: REST
     href: /rest/api/hdinsight/
-  - name: REST (Spark)
+  - name: REST (Apache Spark)
     href: /rest/api/hdinsightspark/
 - name: Relaterat
   items:
@@ -281,15 +281,15 @@ items:
     - name: Migrera .NET-lösningar till Linux-kluster
       href: ../hdinsight-hadoop-migrate-dotnet-to-linux.md
       maintainContext: true
-    - name: Distribuera och hantera Storm-topologier
+    - name: Distribuera och hantera Apache Storm-topologier
       href: apache-storm-deploy-monitor-topology.md
-    - name: Använda Maven för att skapa Java-program
+    - name: Använda Apache Maven för att skapa Java-program
       href: ../hdinsight-hbase-build-java-maven.md
       maintainContext: true
     - name: Anpassa med skriptåtgärd
       href: ../hdinsight-hadoop-customize-cluster.md
       maintainContext: true
-    - name: Åtkomst till YARN-programloggar
+    - name: Få åtkomst till Apache Hadoop YARN-programloggar
       href: ../hdinsight-hadoop-access-yarn-app-logs.md
       maintainContext: true
     - name: Utveckla skriptåtgärder
@@ -298,7 +298,7 @@ items:
     - name: Hantera kluster med Azure-portalen
       href: ../hdinsight-administer-use-management-portal.md
       maintainContext: true
-    - name: Övervaka kluster med Ambari-API
+    - name: Övervaka kluster med Apache Ambari-API:et
       href: ../hdinsight-monitor-use-ambari-api.md
       maintainContext: true
 - name: Resurser
@@ -316,9 +316,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 056413070b6b268db215a119dd216d8ad711ffb7
-ms.sourcegitcommit: 6361a3d20ac1b902d22119b640909c3a002185b3
+ms.openlocfilehash: 2d3a2999c69833f759cbaab0241136609e068bf2
+ms.sourcegitcommit: 345b96d564256bcd3115910e93220c4e4cf827b3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49365483"
+ms.lasthandoff: 11/28/2018
+ms.locfileid: "52496230"
