--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -42,20 +42,22 @@ items:
   items:
   - name: IoT Edge-körning
     href: iot-edge-runtime.md
-  - name: IoT Edge-certifikat
-    href: iot-edge-certs.md
   - name: IoT Edge-moduler
     items:
     - name: Förstå Azure IoT Edge-moduler
       href: iot-edge-modules.md
     - name: Utveckling
       href: module-development.md
-    - name: Sammansättning
-      href: module-composition.md
     - name: Edge-agenten och hubbegenskaper
       href: module-edgeagent-edgehub.md
-  - name: Distributioner
-    href: module-deployment-monitoring.md
+  - name: Distribution av moduler
+    items:
+    - name: Distributionsmanifest
+      href: module-composition.md
+    - name: Automatiska distributioner
+      href: module-deployment-monitoring.md
+  - name: IoT Edge-certifikat
+    href: iot-edge-certs.md
   - name: Offlinefunktioner
     href: offline-capabilities.md
   - name: IoT Edge-enhet som en gateway
@@ -68,6 +70,8 @@ items:
       href: iot-edge-security-manager.md
   - name: Plattformssupport
     href: support.md
+  - name: Checklista för produktionsdistribution
+    href: production-checklist.md
   - name: IoT Edge-ordlista
     href: iot-edge-glossary.md
 - name: Instruktionsguider
@@ -218,9 +222,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: 7ad5c5da9162c2b5d9b5908dbea5630cf277393c
-ms.sourcegitcommit: b62f138cc477d2bd7e658488aff8e9a5dd24d577
+ms.openlocfilehash: 27bc0b00a51f10695c5ce1e2e600b91a1f97b0ab
+ms.sourcegitcommit: 56d20d444e814800407a955d318a58917e87fe94
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "51613910"
+ms.lasthandoff: 11/29/2018
+ms.locfileid: "52582814"
