--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -43,6 +43,8 @@ items:
       href: autogen-bitrate-ladder.md
   - name: Undersöka entiteter
     items:
+    - name: Konto- och tillgångsfilter
+      href: filters-dynamic-manifest-overview.md
     - name: Tillgångar
       href: assets-concept.md
     - name: Principer för innehållsnycklar
@@ -65,8 +67,17 @@ items:
       href: content-protection-overview.md
     - name: Multi-DRM-system med åtkomstkontroll
       href: design-multi-drm-system-with-access-control.md
-  - name: Direktuppspelning i realtid
+  - name: Direktuppspelning av händelser
     href: live-streaming-overview.md
+    items:
+    - name: Använda en moln-DVR
+      href: live-event-cloud-dvr.md
+    - name: Jämförelse mellan typer
+      href: live-event-types-comparison.md
+    - name: Tillstånd och fakturering
+      href: live-event-states-billing.md
+    - name: Svarstid
+      href: live-event-latency.md
 - name: Instruktionsguider
   items:
   - name: Migrera från v2 till v3
@@ -81,6 +92,14 @@ items:
       href: job-input-from-http-how-to.md
     - name: Från en lokal fil – .NET
       href: job-input-from-local-file-how-to.md
+  - name: Skapa filter
+    items:
+    - name: Med .NET
+      href: filters-dynamic-manifest-dotnet-howto.md
+    - name: Med REST
+      href: filters-dynamic-manifest-rest-howto.md
+    - name: Med CLI
+      href: filters-dynamic-manifest-cli-howto.md
   - name: Koda
     items:
     - name: Anpassa förinställningar för transformering – .NET Core
@@ -163,9 +182,9 @@ items:
     href: limits-quotas-constraints.md
   - name: VANLIGA FRÅGOR OCH SVAR
     href: frequently-asked-questions.md
-ms.openlocfilehash: bd33adb7a9ed7f20b1d0ff0172f31023239dee9b
-ms.sourcegitcommit: 0b7fc82f23f0aa105afb1c5fadb74aecf9a7015b
+ms.openlocfilehash: 499be85399b338ba12a4904cc06be4ffd9bdc06c
+ms.sourcegitcommit: c8088371d1786d016f785c437a7b4f9c64e57af0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/14/2018
-ms.locfileid: "51631478"
+ms.lasthandoff: 11/30/2018
+ms.locfileid: "52633035"
