--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -102,6 +102,8 @@ items:
       href: concepts-connection-libraries.md
     - name: Anslutningsåterhämtning
       href: concepts-connectivity.md
+    - name: Utveckla med Azure Kubernetes Service (AKS)
+      href: concepts-aks.md
 - name: Instruktionsguider
   items:
   - name: Skapa användare
@@ -218,9 +220,9 @@ items:
     href: partners-migration-postgresql.md
   - name: Guide för databasmigrering
     href: https://datamigration.microsoft.com/
-ms.openlocfilehash: bbbc843fd62ce447b8e5ac5e8b1f2f472cb5adfc
-ms.sourcegitcommit: ebf2f2fab4441c3065559201faf8b0a81d575743
+ms.openlocfilehash: 5106878f2ea330ec3fb664c044605574f22ddafd
+ms.sourcegitcommit: 922f7a8b75e9e15a17e904cc941bdfb0f32dc153
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/20/2018
-ms.locfileid: "52165521"
+ms.lasthandoff: 11/27/2018
+ms.locfileid: "52334847"
