--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -42,17 +42,17 @@ items:
     href: security-center-wdatp.md
   - name: Skydda App Service
     href: security-center-app-services.md
-  - name: Ange säkerhetsprinciper
+  - name: Visa säkerhetsprinciper
     href: security-center-azure-policy.md
   - name: Anpassa informationsskyddsprincipen
     href: security-center-info-protection-policy.md
-  - name: Inställningar för säkerhetsprincip
+  - name: Security Center-inställningar
     href: security-center-policies-overview.md
     items:
     - name: Datainsamling
       href: security-center-enable-data-collection.md
-    - name: Principdefinitioner
-      href: security-center-policies.md
+    - name: Inbyggda säkerhetsprinciper
+      href: security-center-policy-definitions.md
     - name: E-postmeddelanden
       href: security-center-provide-security-contact-details.md
     - name: Prisnivå
@@ -219,9 +219,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=security-center
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: 09d1086de03ddab3cf2aca54f201c86632ab4c83
-ms.sourcegitcommit: 1b186301dacfe6ad4aa028cfcd2975f35566d756
+ms.openlocfilehash: 4b6187ca5b56ea634524df0294725e23f188d492
+ms.sourcegitcommit: a08d1236f737915817815da299984461cc2ab07e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/06/2018
-ms.locfileid: "51219451"
+ms.lasthandoff: 11/26/2018
+ms.locfileid: "52310454"
