--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -41,6 +41,14 @@ items:
     href: troubleshoot-rdp-nic-disabled.md
   - name: Felsöka RDP-fel som orsakats av felsäkert läge
     href: troubleshoot-rdp-safe-mode.md
+  - name: Inaktivera brandvägg för gästoperativsystem i en virtuell Azure-dator
+    href: disable-guest-os-firewall-windows.md
+  - name: Aktivera eller inaktivera en brandväggsregel i ett gästoperativsystem
+    href: enable-disable-firewall-rule-guest-os.md
+  - name: Brandväggen för gästoperativsystemet blockerar inkommande trafik
+    href: guest-os-firewall-blocking-inbound-traffic.md
+  - name: Brandväggen för gästoperativsystemet är felkonfigurerad
+    href: guest-os-firewall-misconfigured.md
   - name: Felsöka RDP-fel som orsakats av netvsc.sys
     href: troubleshoot-rdp-driver-netvsc.md
 - name: SSH
@@ -153,9 +161,9 @@ items:
   href: understand-vm-reboot.md
 - name: Fjärrfelsökningsverktyg
   href: remote-tools-troubleshoot-azure-vm-issues.md
-ms.openlocfilehash: 5b5da17002955e7a5c24e1b528ebf3076f2de24a
-ms.sourcegitcommit: 022cf0f3f6a227e09ea1120b09a7f4638c78b3e2
+ms.openlocfilehash: 933976034950fbd454789dc620aa34ec9b1598c1
+ms.sourcegitcommit: a08d1236f737915817815da299984461cc2ab07e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/21/2018
-ms.locfileid: "52283833"
+ms.lasthandoff: 11/26/2018
+ms.locfileid: "52306479"
