--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -72,7 +72,7 @@ items:
     items:
     - name: Använda en moln-DVR
       href: live-event-cloud-dvr.md
-    - name: Jämförelse mellan typer
+    - name: Jämför funktioner
       href: live-event-types-comparison.md
     - name: Tillstånd och fakturering
       href: live-event-states-billing.md
@@ -182,9 +182,9 @@ items:
     href: limits-quotas-constraints.md
   - name: VANLIGA FRÅGOR OCH SVAR
     href: frequently-asked-questions.md
-ms.openlocfilehash: 499be85399b338ba12a4904cc06be4ffd9bdc06c
-ms.sourcegitcommit: c8088371d1786d016f785c437a7b4f9c64e57af0
+ms.openlocfilehash: adde15ac255a6d6d918bd0caa12b8ffe47762a09
+ms.sourcegitcommit: cd0a1514bb5300d69c626ef9984049e9d62c7237
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 11/30/2018
-ms.locfileid: "52633035"
+ms.locfileid: "52678465"
